Added HTTP logging with Logbook for all logging profiles